--- a/style.scss
+++ b/style.scss
@@ -37,16 +37,46 @@ header {
 }
 
 main {
-  margin: 3em 15% 3em 15%;
 
   nav {
     position: sticky;
     top: 0;
+    z-index: 5;
+    display: flex;
+    justify-content: space-around;
+    padding: 1em 15% 1em 15%;
+    background-color: $bgcol;
+    border-bottom: 1px solid lighten($fontcol, 30%);
+
+    button.sel_article {
+      background-color: darken($bgcol, 10%);
+      border-radius: 0;
+      border: 1px solid lighten($fontcol, 30%);
+      padding: 0.25em;
+      transition: all 0.5s;
+    }
+
+    button.sel_article.active {
+      background-color: darken($bgcol, 25%);
+      font-weight: 800;
+      border-radius: 0;
+      border: 1px solid lighten($fontcol, 20%);
+      padding: 0.25em;
+    }
   }
 
-  svg#text_line {
-    position: absolute;
-    top: 0;
-    left: 0;
+  article {
+    margin: 3em 15% 3em 15%;
+    line-height: 3;
+
+    span {
+      margin: 0 1em 0 0;
+      font-size: 0.75em;
+    }
+
+    canvas#text_line {
+      position: absolute;
+    }
   }
+
 }
