--- a/style.scss
+++ b/style.scss
@@ -1,12 +1,10 @@
-$emph_col: #7bbb40;
+$emph_col: #6ebb09;
 $fontcol: #2b2c3b;
 $bgcol: #e9eac6;
 
 body {
   font-family: 'Inconsolata', monospace;
   line-height: 1.75;
-  overflow-wrap: break-word;
-  word-wrap: break-word;
   margin: 0;
   color: $fontcol;
   background-color: $bgcol;
@@ -63,6 +61,11 @@ main {
       border: 1px solid lighten($fontcol, 20%);
       padding: 0.25em;
     }
+
+    span#selected_state {
+      background: lighten($fontcol, 50%);
+      padding: 0 0.5em 0 0.5em;
+    }
   }
 
   article {
@@ -70,12 +73,27 @@ main {
     line-height: 3;
 
     span {
-      margin: 0 1em 0 0;
+      pointer-events: none;
       font-size: 0.75em;
+      z-index: 1;
     }
 
-    canvas#text_line {
+    svg#text_line {
       position: absolute;
+      overflow: visible;
+
+      path {
+        fill: none;
+        stroke: #978aa2;
+        opacity: 0.15;
+        transition: all 0.25s;
+      }
+
+      path:hover, path.active {
+        stroke: $emph_col;
+        opacity: 1;
+        stroke-width: 3px;
+      }
     }
   }
 
