--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ main nav {
   top: 0;
   z-index: 5;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   padding: 1em 15% 1em 15%;
   background-color: #ececec;
