--- a/style.scss
+++ b/style.scss
@@ -41,6 +41,7 @@ main {
     top: 0;
     z-index: 5;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     padding: 1em 15% 1em 15%;
     background-color: $bgcol;
